--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.5.1",
     "react-helmet": "^5.2.0",
     "react-typography": "^0.16.13",
+    "shelljs": "^0.8.3",
     "styled-components": "^4.1.3",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
@@ -73,5 +74,8 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "bin": {
+    "generate-post": "bin/generator.js"
   }
 }
