--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "cSpell.words": [
-        "frontmatter",
-        "gitrepo",
-        "masbossun"
-    ]
+  "cSpell.words": ["frontmatter", "gitrepo", "masbossun"]
 }
