--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "typography-theme-wordpress-2016": "^0.16.19"
   },
   "devDependencies": {
+    "chalk": "^2.4.2",
     "prettier": "^1.18.2",
     "shelljs": "^0.8.3"
   },
